--- a/src/styles/stylesheet.scss
+++ b/src/styles/stylesheet.scss
@@ -20,8 +20,8 @@ $system_bg_color: $base_color;
 .snap-assistant {
     /*background-color: lighten($system_bg_color, 5%);
     border: 1px $borders_color solid;
-    border-top: 1px lighten($system_bg_color, 5%) solid;
-    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);*/
+    border-top: 1px lighten($system_bg_color, 5%) solid;*/
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
     border: 0;
     border-radius: 0 0 $base_border_radius $base_border_radius;
     padding: $base_padding*2; // 12px
@@ -31,9 +31,10 @@ $system_bg_color: $base_color;
     border-radius: $base_border_radius;
 }
 
-.snap-assist-layout {
-    /* unstyled, yet... */
-}
+/* unstyled, yet... */
+/*.snap-assist-layout {
+    
+}*/
 
 .snap-assist-tile {
     border-radius: 4px;
