--- a/src/styles/indicator.scss
+++ b/src/styles/indicator.scss
@@ -13,5 +13,10 @@
 
     .snap-assist-tile {
         border-radius-value: $snap-assist-tile-border-radius - 2;
+        border-width: calc($snap-assist-tile-border-width / 2);
+    }
+
+    .layout-button {
+        border-width: calc($snap-assist-tile-border-width / 2);
     }
 }
