--- a/src/styles/editor.scss
+++ b/src/styles/editor.scss
@@ -43,7 +43,7 @@
         text-align: center;
         font-family: monospace;
         padding: calc($base-padding / 3) calc($base-padding * 2);
-        box-shadow: inset 0px -3px 0px 0px rgba(0,0,0,0.2);
+        box-shadow: inset 0px -3px 0px 0px rgba(0, 0, 0, 0.2);
     }
 }
 
