--- a/src/styles/stylesheet.scss
+++ b/src/styles/stylesheet.scss
@@ -32,3 +32,4 @@ $base_border_radius: 8px; //to_em(8px);
 @import "indicator.scss";
 @import "layout_button.scss";
 @import "editor.scss";
+@import "window_menu.scss";
