--- a/src/styles/snap_assist.scss
+++ b/src/styles/snap_assist.scss
@@ -13,18 +13,18 @@ $snap-assist-tile-border-radius: 6px;
     border-radius-value: $snap-assist-tile-border-radius;
     // light theme as default
     border-width: $snap-assist-tile-border-width;
-    border-color: rgba(255,255,255,0.4);
-    background-color: rgba(255,255,255,0.25);
+    border-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(255, 255, 255, 0.25);
 }
 
 .snap-assist-tile:hover {
-    border-color: rgba(255,255,255,0.7);
-    background-color: rgba(255,255,255,0.4);
+    border-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(255, 255, 255, 0.4);
 }
 
 .snap-assist-tile.dark {
-    border-color: rgba(0,0,0,0.3);
-    background-color: rgba(0,0,0,0.12);
+    border-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.12);
     /*border-color: #8e8e8e;
     background-color: #e0e0e0;*/
 }
@@ -32,6 +32,6 @@ $snap-assist-tile-border-radius: 6px;
 .snap-assist-tile.dark:hover {
     /*border-color: #777777;
     background-color: #a2a2a2;*/
-    border-color: rgba(0,0,0,0.45);
-    background-color: rgba(0,0,0,0.3);
+    border-color: rgba(0, 0, 0, 0.45);
+    background-color: rgba(0, 0, 0, 0.3);
 }
