--- a/src/styles/stylesheet.scss
+++ b/src/styles/stylesheet.scss
@@ -33,3 +33,4 @@ $base_border_radius: 8px; //to_em(8px);
 @import 'layout_button.scss';
 @import 'editor.scss';
 @import 'window_menu.scss';
+@import 'layout_icon.scss';
