--- a/src/styles/layout_button.scss
+++ b/src/styles/layout_button.scss
@@ -31,6 +31,6 @@
 
     .snap-assist-tile.dark {
         border-color: #6c6c6c;
-        background-color: #d3d3d3;
+        background-color: #c4c4c4;
     }
 }
