--- a/src/styles/stylesheet.scss
+++ b/src/styles/stylesheet.scss
@@ -34,3 +34,4 @@ $base_border_radius: 8px; //to_em(8px);
 @import 'editor.scss';
 @import 'window_menu.scss';
 @import 'layout_icon.scss';
+@import 'window_border.scss';
