--- a/src/styles/stylesheet.scss
+++ b/src/styles/stylesheet.scss
@@ -35,3 +35,4 @@ $base_border_radius: 8px; //to_em(8px);
 @import 'window_menu.scss';
 @import 'layout_icon.scss';
 @import 'window_border.scss';
+@import 'tiling_popup.scss';
