--- a/src/styles/window_menu.scss
+++ b/src/styles/window_menu.scss
@@ -3,7 +3,7 @@
         border-color: rgba(255, 255, 255, 0.2);
         background-color: rgba(255, 255, 255, 0.2);
         border-radius-value: $snap-assist-tile-border-radius - 2;
-        border-width: calc($snap-assist-tile-border-width / 2);
+        border-width-value: calc($snap-assist-tile-border-width / 2);
     }
 
     .snap-assist-tile.dark {
