--- a/src/styles/layout_icon.scss
+++ b/src/styles/layout_icon.scss
@@ -1,7 +1,7 @@
 .layout-icon {
     .snap-assist-tile {
         border-radius-value: $snap-assist-tile-border-radius - 1;
-        border-width: calc($snap-assist-tile-border-width / 2);
+        border-width-value: calc($snap-assist-tile-border-width / 2);
         border-color: rgba(255, 255, 255, 0.2);
         background-color: rgba(255, 255, 255, 0.2);
     }
