--- a/src/styles/stylesheet.scss
+++ b/src/styles/stylesheet.scss
@@ -1,38 +1,12 @@
-// Function to convert px values to em
-// From https://gitlab.gnome.org/GNOME/gnome-shell/-/blob/main/data/theme/gnome-shell-sass/_drawing.scss#L6
-@function to_em($input, $base: 16px) {
-    // multiplied and divided by 1000 to make up for round() shortcoming
-    $em_value: calc($input / $base) * 1.091 * 1000;
-    @return calc(round($em_value) / 1000) * 1em;
-}
+@use 'constants.scss';
+@use 'functions.scss';
+@use 'tile_preview.scss';
+@use 'snap_assist.scss';
+@use 'indicator.scss';
+@use 'layout_button.scss';
+@use 'editor.scss';
+@use 'window_menu.scss';
+@use 'layout_icon.scss';
+@use 'window_border.scss';
+@use 'tiling_popup.scss';
 
-// From https://gitlab.gnome.org/GNOME/gnome-shell/-/blob/43.0/data/theme/gnome-shell-sass/_common.scss
-$base_font_size: 11pt; // font size
-$base_padding: to_em(6px); //6px;
-$base_margin: 4px;
-$base_border_radius: 8px; //to_em(8px);
-
-// From https://gitlab.gnome.org/GNOME/gnome-shell/-/blob/main/data/theme/gnome-shell-sass/_drawing.scss#L66
-// Mixin to convert provided font size in pt to em units
-@mixin fontsize($size, $base: 16px, $unit: pt) {
-    // if pt, convert into unitless value with the assumption: 1pt = 1.091px
-    $adjusted_size: if($unit == pt, $size * 1.091, $size) * 1000;
-    $rounded_size: calc(round($adjusted_size / $base) / 1000);
-    font-size: $rounded_size * 1em;
-    // font-size: round($size) + pt;
-}
-
-%title_2 {
-    font-weight: 800;
-    @include fontsize(15pt);
-}
-
-@import 'tile_preview.scss';
-@import 'snap_assist.scss';
-@import 'indicator.scss';
-@import 'layout_button.scss';
-@import 'editor.scss';
-@import 'window_menu.scss';
-@import 'layout_icon.scss';
-@import 'window_border.scss';
-@import 'tiling_popup.scss';
