--- a/src/styles/layout_switcher.scss
+++ b/src/styles/layout_switcher.scss
@@ -1,33 +1,11 @@
-@use "constants";
-
-
-.layout-switcher-popup {
-    padding: 16px;
-}
+@use "snap_assist";
 
 .layout-switcher-list {
-    spacing: 12px;
-    background-color: #151618;
-    box-shadow: 0 8px 8px 0 rgba(0,0,0,0.2);
-    padding: 8px;
-    border-radius: constants.$base_border_radius;
-
-    .layout-button {
-        background-color: #303030 !important;
-    }
+    //spacing: 12px;
+    //padding: 8px;
 
     .snap-assist-tile {
-        border-color: #5E6265 !important;
-        background-color: #313537 !important;
-    }
-
-    .snap-assist-tile:hover {
-        border-color: #D4D4D4 !important;
-        background-color: rgba(154, 154, 154, 0.6) !important;
-    }
-
-    .layout-button:checked .snap-assist-tile {
-        border-color: #D4D4D4 !important;
-        background-color: rgba(154, 154, 154, 0.6) !important;
+        border-radius-value: snap_assist.$snap-assist-tile-border-radius - 1;
+        border-width-value: calc(snap_assist.$snap-assist-tile-border-width / 2);
     }
 }
