--- a/src/styles/layout_switcher.scss
+++ b/src/styles/layout_switcher.scss
@@ -1,11 +1,8 @@
 @use "snap_assist";
 
 .layout-switcher-list {
-    //spacing: 12px;
-    //padding: 8px;
-
     .snap-assist-tile {
-        border-radius-value: snap_assist.$snap-assist-tile-border-radius - 1;
-        border-width-value: calc(snap_assist.$snap-assist-tile-border-width / 2);
+        border-radius-value: snap_assist.$snap-assist-tile-border-radius;
+        border-width-value: snap_assist.$snap-assist-tile-border-width;
     }
 }
